Fixed chatinput z-index

--- a/src/components/room/widgets/chat-input/ChatInputView.scss
+++ b/src/components/room/widgets/chat-input/ChatInputView.scss
@@ -13,7 +13,7 @@
     padding-right: 10px;
     width: 500px;
     overflow: hidden;
-    z-index: 1;
+    z-index: 31;
 
     @include media-breakpoint-down(sm) {
         display: flex;
